--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 <div>
 	<p>My current favourite song is Main Bhikar Chuka tha </p>
-	<a href= "https://youtu.be/SxM5c8mhfFk?list=RDSxM5c8mhfFk " target="_blank"></a><br>
+	<a href= "https://youtu.be/SxM5c8mhfFk" target="_blank">Song Link</a><br>
 	
 </div>
 </body>
